--- a/src/styles.css
+++ b/src/styles.css
@@ -73,3 +73,94 @@
   color: #686980;
   font-size: 12px;
 }
+
+.grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
+  grid-gap: 20px;
+  align-items: stretch;
+}
+
+.grid > article {
+  padding: 2px;
+  margin-top: 5px;
+  border: 1px solid #ccc;
+  box-shadow: 2px 2px 6px 0px rgba(0, 0, 0, 0.3);
+  width: 200px;
+}
+
+.grid > article img {
+  max-width: 100%;
+}
+
+.grid .text {
+  padding: 20px;
+  overflow-wrap: break-word;
+}
+.dropbtn {
+  background-color: #4caf50;
+  color: white;
+  padding: 2px;
+  font-size: 25px;
+  border: none;
+  cursor: pointer;
+}
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown-content a:hover {
+  background-color: #f1f1f1;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+.dropdown:hover .dropbtn {
+  background-color: #3e8e41;
+}
+.a {
+  display: inline-block; /* the default for span */
+}
+.center {
+  margin-left: 10rem;
+}
+
+@media all and (max-width: 1000px) and (min-width: 700px) {
+  .center {
+    margin-left: 4rem;
+  }
+  .search-container {
+    width: 500px !important;
+  }
+}
+@media all and (max-width: 700px) {
+  .center {
+    margin-left: 1rem;
+  }
+  .search-container {
+    width: 200px !important;
+  }
+  .search-container input {
+    width: 200px !important;
+  }
+}
